Finally got the damn navbar to stop covering up content.

--- a/RubberduckWeb/RubberduckWeb/Content/Site.css
+++ b/RubberduckWeb/RubberduckWeb/Content/Site.css
@@ -1,5 +1,4 @@
 ﻿body {
-    padding-top: 50px;
     padding-bottom: 20px;
 }
 
@@ -47,20 +46,3 @@ h3, .h3 {
         color: #5E5D5D;
         float: right;
     }
-
-/*Over ride bootstrap top margin to account for us using an image instead of text for our Nav Header*/
-.body-content {
-    margin-top: 50px;
-    padding-top: 20px;
-}
-
-a.navbar-brand {
-    /* shift the nav links farther to the right side of the screen */
-    margin-right: 10em;
-}
-
-/*Possible future color scheme for nav bar*/
-/*.navbar-inverse {
-  background-color: #FFFFFF;
-  border-color: #999999;
-}*/
